--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
 
     // User interface
+    compile 'com.squareup.picasso:picasso:2.5.2'
     kapt "com.android.databinding:compiler:2.3.3"
 
     // Dagger
